Some necessary changes

--- a/NLP_sentiment_analysis.ipynb
+++ b/NLP_sentiment_analysis.ipynb
@@ -2562,7 +2562,7 @@
    "outputs": [],
    "source": [
     "sample_tweet_1 = ['This is me, I am so excited... Yaaaaa']\n",
-    "sample_tweet_2 = ['So sad, not fair... What have I done crying? Just sad']"
+    "sample_tweet_2 = ['So sad, not fair... What have I done? Just sad #crying']"
    ]
   },
   {
@@ -2633,9 +2633,9 @@
    "source": [
     "# Saving the vectorizer and the trained model to disk, for deployment purposes\n",
     "\n",
-    "pickle.dump(cv, open('vectorizer.sav', 'wb'))\n",
+    "pickle.dump(cv, open('outputs/vectorizer.sav', 'wb'))\n",
     "\n",
-    "filename = 'final_model.sav'\n",
+    "filename = 'outputs/final_model.sav'\n",
     "pickle.dump(gs_clf, open(filename, 'wb'))"
    ]
   },
